--- a/AAP_C14_RAG_Evaluation_using_fixed_sources.ipynb
+++ b/AAP_C14_RAG_Evaluation_using_fixed_sources.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "1c748b92-e590-408f-bd20-733dc79d643e",
       "metadata": {
         "colab": {
@@ -85,7 +85,7 @@
         "id": "R4xKXwD-Kk4B",
         "outputId": "db87d4c2-8147-4e94-896e-d61c4a3fc1fa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "ljNSpp5QKntC"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [],
       "id": "ljNSpp5QKntC"
     },
@@ -130,13 +130,13 @@
       "metadata": {
         "id": "MryHMR7OKp2l"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [],
       "id": "MryHMR7OKp2l"
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "78c086f0-f1c4-4a55-a922-c926239de2c4",
       "metadata": {
         "id": "78c086f0-f1c4-4a55-a922-c926239de2c4"
@@ -148,7 +148,7 @@
         "\n",
         "# Update with your API URL if using a hosted instance of Langsmith.\n",
         "os.environ[\"LANGCHAIN_ENDPOINT\"] = \"https://api.smith.langchain.com\"\n",
-        "os.environ[\"LANGCHAIN_API_KEY\"] = \"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\"  # Update with your API key\n",
+        "os.environ[\"LANGCHAIN_API_KEY\"] = \"xxxxxxxxxxxxxxxxxxxxxxxx\"  # Update with your API key\n",
         "uid = uuid.uuid4()"
       ]
     },
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "83f83f2e-76d1-4d86-9275-35bd61df014e",
       "metadata": {
         "id": "83f83f2e-76d1-4d86-9275-35bd61df014e"
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "adf85a45-e100-4d28-a102-ec1d135f0ba7",
       "metadata": {
         "id": "adf85a45-e100-4d28-a102-ec1d135f0ba7"
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "6314168f-9530-476f-949b-d49c40db55ea",
       "metadata": {
         "id": "6314168f-9530-476f-949b-d49c40db55ea"
@@ -295,40 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "id": "8217e940-e6d0-4f08-bed7-41cda7a35ce8",
-      "metadata": {
-        "id": "8217e940-e6d0-4f08-bed7-41cda7a35ce8"
-      },
-      "outputs": [],
-      "source": [
-        "from langsmith.evaluation import RunEvaluator, EvaluationResult\n",
-        "from langchain.evaluation import load_evaluator\n",
-        "\n",
-        "\n",
-        "class FaithfulnessEvaluator(RunEvaluator):\n",
-        "    def __init__(self):\n",
-        "        self.evaluator = load_evaluator(\n",
-        "            \"labeled_score_string\",\n",
-        "            criteria={\n",
-        "                \"faithful\": \"How faithful is the submission to the reference context?\"\n",
-        "            },\n",
-        "            normalize_by=10,\n",
-        "        )\n",
-        "\n",
-        "    def evaluate_run(self, run, example) -> EvaluationResult:\n",
-        "        res = self.evaluator.evaluate_strings(\n",
-        "            prediction=next(iter(run.outputs.values())),\n",
-        "            input=run.inputs[\"question\"],\n",
-        "            # We are treating the documents as the reference context in this case.\n",
-        "            reference=example.inputs[\"documents\"],\n",
-        "        )\n",
-        "        return EvaluationResult(key=\"labeled_criteria:faithful\", **res)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "70e56fe8-ae02-481d-b6f6-729e535c5e88",
       "metadata": {
         "colab": {
@@ -367,6 +334,26 @@
       ],
       "source": [
         "from langchain.smith import RunEvalConfig\n",
+        "from langsmith.evaluation import RunEvaluator, EvaluationResult\n",
+        "from langchain.evaluation import load_evaluator\n",
+        "\n",
+        "evaluation_llm = ChatVertexAI(model=\"gemini-1.5-flash-001\")\n",
+        "\n",
+        "eval_config = RunEvalConfig(\n",
+        "    evaluators=['qa'],\n",
+        "    eval_llm = evaluation_llm,\n",
+        "    input_key=\"question\",\n",
+        ")\n",
+        "results = client.run_on_dataset(\n",
+        "    llm_or_chain_factory=response_synthesizer,\n",
+        "    dataset_name=dataset_name,\n",
+        "    evaluation=eval_config,\n",
+        ")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from langchain_core.prompts.prompt import PromptTemplate\n",
         "from langsmith.evaluation import LangChainStringEvaluator\n",
         "\n",
@@ -388,21 +375,17 @@
         "\n",
         "evaluation_llm = ChatVertexAI(model=\"gemini-1.5-flash-001\")\n",
         "\n",
-        "#qa_evaluator = LangChainStringEvaluator(\"qa\", config={\"llm\": evaluation_llm, \"prompt\": PROMPT})\n",
+        "qa_evaluator = LangChainStringEvaluator(\"qa\", config={\"llm\": evaluation_llm, \"prompt\": PROMPT})\n",
         "#context_qa_evaluator = LangChainStringEvaluator(\"context_qa\", config={\"llm\": eval_llm})\n",
         "#cot_qa_evaluator = LangChainStringEvaluator(\"cot_qa\", config={\"llm\": eval_llm})\n",
-        "\n",
-        "eval_config = RunEvalConfig(\n",
-        "    evaluators=['qa'],\n",
-        "    eval_llm = evaluation_llm,\n",
-        "    input_key=\"question\",\n",
-        ")\n",
-        "results = client.run_on_dataset(\n",
-        "    llm_or_chain_factory=response_synthesizer,\n",
-        "    dataset_name=dataset_name,\n",
-        "    evaluation=eval_config,\n",
-        ")\n"
-      ]
+        "\n"
+      ],
+      "metadata": {
+        "id": "fIAlqR3pj6sn"
+      },
+      "id": "fIAlqR3pj6sn",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
