--- a/Task2_github_copilot_testing_exercise.ipynb
+++ b/Task2_github_copilot_testing_exercise.ipynb
@@ -12,9 +12,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "5b934457",
+      "id": "3e2ea53d",
       "metadata": {
-        "id": "5b934457"
+        "id": "3e2ea53d"
       },
       "source": [
         "# GitHub Copilot Testing and Learning Exercise"
@@ -22,9 +22,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "0b006dcc",
+      "id": "f3dc207f",
       "metadata": {
-        "id": "0b006dcc"
+        "id": "f3dc207f"
       },
       "source": [
         "\n",
@@ -40,9 +40,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "3d1822b6",
+      "id": "2bc0a8b6",
       "metadata": {
-        "id": "3d1822b6"
+        "id": "2bc0a8b6"
       },
       "source": [
         "## 1. Code Generation"
@@ -50,31 +50,63 @@
     },
     {
       "cell_type": "markdown",
-      "id": "a99d94c3",
+      "id": "1430970c",
       "metadata": {
-        "id": "a99d94c3"
+        "id": "1430970c"
       },
       "source": [
-        "Use GitHub Copilot to generate code for the following task:"
+        "Use GitHub Copilot to generate code for the following tasks:"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "85575965",
+      "id": "e8435772",
       "metadata": {
-        "id": "85575965"
+        "id": "e8435772"
       },
       "outputs": [],
       "source": [
-        "# Task: Generate a Python function that calculates the factorial of a number."
+        "# Task 1: Generate a Python function that calculates the factorial of a number."
       ]
     },
     {
       "cell_type": "markdown",
-      "id": "9668aa25",
+      "id": "6ea01c87",
       "metadata": {
-        "id": "9668aa25"
+        "id": "6ea01c87"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Write a Python function that calculates the factorial of a number`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f720e451",
+      "metadata": {
+        "id": "f720e451"
+      },
+      "outputs": [],
+      "source": [
+        "# Task 2: Generate a Python function that checks if a string is a palindrome."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d30bd4cb",
+      "metadata": {
+        "id": "d30bd4cb"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Write a Python function that checks if a string is a palindrome`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7c22970e",
+      "metadata": {
+        "id": "7c22970e"
       },
       "source": [
         "## 2. Code Complexity Calculation for a Given Code"
@@ -82,9 +114,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "5a09f082",
+      "id": "2dfa18c3",
       "metadata": {
-        "id": "5a09f082"
+        "id": "2dfa18c3"
       },
       "source": [
         "Use GitHub Copilot to calculate the complexity of the following code:"
@@ -93,9 +125,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "edeb3644",
+      "id": "a394eaf7",
       "metadata": {
-        "id": "edeb3644"
+        "id": "a394eaf7"
       },
       "outputs": [],
       "source": [
@@ -115,9 +147,48 @@
     },
     {
       "cell_type": "markdown",
-      "id": "89855a46",
+      "id": "31e838b4",
       "metadata": {
-        "id": "89855a46"
+        "id": "31e838b4"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Calculate the time complexity of the given Python code`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c23ae1a4",
+      "metadata": {
+        "id": "c23ae1a4"
+      },
+      "outputs": [],
+      "source": [
+        "\n",
+        "def bubble_sort(arr):\n",
+        "    n = len(arr)\n",
+        "    for i in range(n):\n",
+        "        for j in range(0, n-i-1):\n",
+        "            if arr[j] > arr[j+1]:\n",
+        "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+        "    return arr\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f7f8f1e9",
+      "metadata": {
+        "id": "f7f8f1e9"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Calculate the time complexity of the given Python code`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5edcd165",
+      "metadata": {
+        "id": "5edcd165"
       },
       "source": [
         "## 3. Code Optimization"
@@ -125,9 +196,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "90cccea5",
+      "id": "386593c9",
       "metadata": {
-        "id": "90cccea5"
+        "id": "386593c9"
       },
       "source": [
         "Use GitHub Copilot to optimize the following code:"
@@ -136,9 +207,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "e3149693",
+      "id": "c36b7c7e",
       "metadata": {
-        "id": "e3149693"
+        "id": "c36b7c7e"
       },
       "outputs": [],
       "source": [
@@ -153,9 +224,46 @@
     },
     {
       "cell_type": "markdown",
-      "id": "ee5d40f2",
+      "id": "0dcb1198",
       "metadata": {
-        "id": "ee5d40f2"
+        "id": "0dcb1198"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Optimize the following Python code for finding the maximum value in a list`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "418cb634",
+      "metadata": {
+        "id": "418cb634"
+      },
+      "outputs": [],
+      "source": [
+        "\n",
+        "def sum_of_squares(nums):\n",
+        "    result = 0\n",
+        "    for num in nums:\n",
+        "        result += num * num\n",
+        "    return result\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5c54000d",
+      "metadata": {
+        "id": "5c54000d"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Optimize the following Python code for calculating the sum of squares`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2d74067e",
+      "metadata": {
+        "id": "2d74067e"
       },
       "source": [
         "## 4. Code Debugging"
@@ -163,9 +271,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "8525a8fa",
+      "id": "7b70830e",
       "metadata": {
-        "id": "8525a8fa"
+        "id": "7b70830e"
       },
       "source": [
         "Use GitHub Copilot to debug the following code and correct any errors:"
@@ -174,9 +282,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "33c91246",
+      "id": "c5881e31",
       "metadata": {
-        "id": "33c91246"
+        "id": "c5881e31"
       },
       "outputs": [],
       "source": [
@@ -196,9 +304,50 @@
     },
     {
       "cell_type": "markdown",
-      "id": "8817f54a",
+      "id": "96dae76e",
       "metadata": {
-        "id": "8817f54a"
+        "id": "96dae76e"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Debug the following Python code to check for prime numbers`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "405160df",
+      "metadata": {
+        "id": "405160df"
+      },
+      "outputs": [],
+      "source": [
+        "\n",
+        "def sum_elements(arr):\n",
+        "    total = 0\n",
+        "    for element in arr:\n",
+        "        total += element\n",
+        "    return total\n",
+        "\n",
+        "# Example test\n",
+        "print(sum_elements([1, 2, 3, 4]))  # Expected output: 10\n",
+        "print(sum_elements([]))            # Expected output: 0\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b1ed9597",
+      "metadata": {
+        "id": "b1ed9597"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Debug the following Python code to sum the elements of a list`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "bf4d4194",
+      "metadata": {
+        "id": "bf4d4194"
       },
       "source": [
         "## 5. Code Explanation"
@@ -206,9 +355,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "328330a2",
+      "id": "87f25f22",
       "metadata": {
-        "id": "328330a2"
+        "id": "87f25f22"
       },
       "source": [
         "Use GitHub Copilot to provide an explanation for the following code:"
@@ -217,9 +366,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "6a27db8b",
+      "id": "7bc27628",
       "metadata": {
-        "id": "6a27db8b"
+        "id": "7bc27628"
       },
       "outputs": [],
       "source": [
@@ -235,30 +384,20 @@
     },
     {
       "cell_type": "markdown",
-      "id": "17220c86",
+      "id": "cf0a9eda",
       "metadata": {
-        "id": "17220c86"
+        "id": "cf0a9eda"
       },
       "source": [
-        "## 6. Code Documentation Generation"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "dafd95d8",
-      "metadata": {
-        "id": "dafd95d8"
-      },
-      "source": [
-        "Use GitHub Copilot to generate documentation for the following code:"
+        "**Prompt for Copilot:** `# Explain the following Python code for bubble sort`"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "5136ed4c",
+      "id": "5ec37bf2",
       "metadata": {
-        "id": "5136ed4c"
+        "id": "5ec37bf2"
       },
       "outputs": [],
       "source": [
@@ -270,6 +409,95 @@
         "\n",
         "# Example usage\n",
         "print(gcd(48, 18))  # Expected output: 6\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "ab4873f4",
+      "metadata": {
+        "id": "ab4873f4"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Explain the following Python code for finding the greatest common divisor (GCD)`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8fb301cc",
+      "metadata": {
+        "id": "8fb301cc"
+      },
+      "source": [
+        "## 6. Code Documentation Generation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b802b29e",
+      "metadata": {
+        "id": "b802b29e"
+      },
+      "source": [
+        "Use GitHub Copilot to generate documentation for the following code:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0c5a4463",
+      "metadata": {
+        "id": "0c5a4463"
+      },
+      "outputs": [],
+      "source": [
+        "\n",
+        "def gcd(a, b):\n",
+        "    while b:\n",
+        "        a, b = b, a % b\n",
+        "    return a\n",
+        "\n",
+        "# Example usage\n",
+        "print(gcd(48, 18))  # Expected output: 6\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "feb34b4e",
+      "metadata": {
+        "id": "feb34b4e"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Generate documentation for the following Python code for finding the greatest common divisor (GCD)`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "28a56140",
+      "metadata": {
+        "id": "28a56140"
+      },
+      "outputs": [],
+      "source": [
+        "\n",
+        "def factorial(n):\n",
+        "    if n == 0:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return n * factorial(n - 1)\n",
+        "\n",
+        "# Example usage\n",
+        "print(factorial(5))  # Expected output: 120\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f80b6a00",
+      "metadata": {
+        "id": "f80b6a00"
+      },
+      "source": [
+        "**Prompt for Copilot:** `# Generate documentation for the following Python code for calculating the factorial of a number`"
       ]
     }
   ],
